--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-select": "^5.8.0"
+    "react-select": "^5.8.0",
+    "react-tag-input": "^6.10.3"
   },
   "devDependencies": {
     "@types/node": "^20",
