--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.2.1",
     "react-select": "^5.8.0",
     "react-tag-input": "^6.10.3"
   },
