--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-select": "^5.8.0",
+    "react-speech-kit": "^3.0.1",
+    "react-speech-recognition": "^3.10.0",
     "react-tag-input": "^6.10.3"
   },
   "devDependencies": {
