--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-select": "^5.8.0",
+    "react-speakup": "^1.0.0",
     "react-speech-kit": "^3.0.1",
     "react-speech-recognition": "^3.10.0",
     "react-tag-input": "^6.10.3"
@@ -22,6 +23,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-speech-recognition": "^3.9.5",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
