--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "date-fns": "^3.6.0",
+    "firebase": "^9.23.0",
     "next": "14.2.4",
     "react": "^18",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18",
+    "react-firebase-hooks": "^5.1.1",
+    "react-firebaseui": "^6.0.0",
     "react-icons": "^5.2.1",
     "react-select": "^5.8.0",
     "react-speakup": "^1.0.0",
