wohoo, everything almost done, made it even size responsive

--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@teachablemachine/image": "^0.8.5",
     "@tensorflow/tfjs-node": "^4.20.0",
     "canvas": "^2.11.2",
+    "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "encoding": "^0.1.13",
+    "express": "^4.19.2",
     "firebase": "^10.12.3",
     "fs": "^0.0.1-security",
     "js-cookie": "^3.0.5",
